--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/ZekunC/Obsidian-Typora-Vue-Theme/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://tranquil-froyo-7daca9.netlify.app
 SHOW_CREATED_TIMESTAMP=false
@@ -9,7 +10,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=""
+STYLE_SETTINGS_CSS="body.css-settings-manager { --h2-size: 1.1em; --code-size: 12px; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
